(chore): Added expo plugin links to docs

--- a/docs/content/expo/index.mdx
+++ b/docs/content/expo/index.mdx
@@ -3,6 +3,12 @@ title: Getting Started with Expo
 description: Get up and running with Expo using a `config-plugin`
 ---
 
+## with-rn-bluetooth-classic
+
+After discussions with [amitferman](https://github.com/amitferman) he's released a `with-rn-bluetooth-classic` Expo plugin to get things working.
+
+- [https://github.com/amitferman/with-rn-bluetooth-classic](https://github.com/amitferman/with-rn-bluetooth-classic)
+
 ## Expo Installation
 
 Install `react-native-bluetooth-classic` and `with-rn-bluetooth-classic` (for auto-configuration of permissions and protocols) from `npm` with `expo install`:
