fix(docs): Updated documentation with binary
Updated documentation with `binary` connection type

--- a/docs/content/react-native/rn-bluetooth-device.mdx
+++ b/docs/content/react-native/rn-bluetooth-device.mdx
@@ -56,6 +56,8 @@ async connect() {
 
 `CONNECTOR_TYPE` - specify the connector; defaults to `rfcomm`
 
+`CONNECTION_TYPE` - specify the connection; defaults to `delimited`
+
 **RfcommConnectorThreadImpl**
 
 `SECURE_SOCKET` - whether to initiate connection with secure or insecure socket; defaults to `true`.
