Updating plugin name

--- a/docs/content/expo/index.mdx
+++ b/docs/content/expo/index.mdx
@@ -21,7 +21,7 @@ Configure `app.json` or `app.config.json` with the following:
 
 ```
 "plugins": [
-      ["with-bluetooth-classic",
+      ["with-rn-bluetooth-classic",
         {
           "peripheralUsageDescription": "Allow myDevice to check bluetooth peripheral info",
           "alwaysUsageDescription": "Allow myDevice to always use bluetooth info",
