fix(docs): rebuild docs with new gatsby theme

--- a/docs/src/docs/android/index.mdx
+++ b/docs/src/docs/android/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Getting Started with Android
-description: ""
+description: Overview of Android specific configuration and APIs
 ---
 
 ## Installation
