--- a/docs/src/docs/ios/index.mdx
+++ b/docs/src/docs/ios/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Getting Started with IOS
-description: ""
+description: Overview of IOS specific configuration and APIs
 ---
 
 ## Installation
