--- a/docs/src/docs/guides/using-with-expo.mdx
+++ b/docs/src/docs/guides/using-with-expo.mdx
@@ -3,9 +3,9 @@ title: Getting Started with Expo
 description: Get up and running with Expo using a `config-plugin`
 ---
 
-## with-rn-bluetooth-classic
+## Expo Plugin
 
-After discussions with [amitferman](https://github.com/amitferman) he's released a `with-rn-bluetooth-classic` Expo plugin to get things working.
+[amitferman](https://github.com/amitferman) released and maintains a `with-rn-bluetooth-classic` Expo plugin to get things working.
 
 - [https://github.com/amitferman/with-rn-bluetooth-classic](https://github.com/amitferman/with-rn-bluetooth-classic)
 
@@ -13,13 +13,13 @@ After discussions with [amitferman](https://github.com/amitferman) he's released
 
 Install `react-native-bluetooth-classic` and `with-rn-bluetooth-classic` (for auto-configuration of permissions and protocols) from `npm` with `expo install`:
 
-```
+```shell
 expo install react-native-bluetooth-classic with-rn-bluetooth-classic
 ```
 
 Configure `app.json` or `app.config.json` with the following:
 
-```
+```javascript
 "plugins": [
       ["with-rn-bluetooth-classic",
         {
